# zkvm-merkle-trees

./: Cargo.toml  btree_ops_cov.html  rust-toolchain.toml  trie_ops_cov.html
.github/workflows/: rust.yml
examples/: prove-and-verify.rs
fuzz/: Cargo.toml
fuzz-afl/: .gitignore  Cargo.toml
fuzz-afl/src/: trie_ops.rs
fuzz/fuzz_targets/: trie_ops.rs
kairos-trie/: Cargo.toml
kairos-trie/src/: hash.rs  lib.rs  stored.rs  transaction.rs
kairos-trie/src/stored/: merkle.rs
kairos-trie/src/transaction/: nodes.rs
kairos-trie/tests/: build_store_entry_ops.rs  build_store_modify.rs  modified_only.rs
kairos-trie/tests/utils/: insert_get.rs  mod.rs  operations.rs
kairos-trie/trie-test-utils/: Cargo.toml
kairos-trie/trie-test-utils/src/: lib.rs
src/: transaction.rs
src/stored/: merkle.rs
zkvm-merkle-btree/: Cargo.toml  LICENSE
zkvm-merkle-btree/btree-test-utils/: Cargo.toml
zkvm-merkle-btree/btree-test-utils/src/: lib.rs
zkvm-merkle-btree/proptest-regressions/: transaction.txt
zkvm-merkle-btree/src/: db.rs  error.rs  lib.rs  node.rs  snapshot.rs  store.rs  transaction.rs
zkvm-merkle-btree/tests/: multi_batch_proptest.proptest-regressions  multi_batch_proptest.rs
