[package]
name = "zkvm-merkle-btree"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[features]
default = ["std"]
std = []
serde = ["dep:serde", "arrayvec/serde"]

[dependencies]
kairos-trie = { path = "../kairos-trie" }

arrayvec = { version = "0.7", default-features = false }
imbl = "4"
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
], optional = true }
smallvec = "1"

[dev-dependencies]
btree-test-utils = { path = "./btree-test-utils" }
proptest-derive = { version = "0.5" }
proptest = { version = "1" }
sha2 = "0.10"
